fix(button): align tekst til venstre ved flere linjer

--- a/npm/designsystem/src/components/Button/styles.module.scss
+++ b/npm/designsystem/src/components/Button/styles.module.scss
@@ -341,6 +341,7 @@ $with-icons: // icon-class, size-class, padding-left, padding-right, padding-lef
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: left;
 
     @media (min-width: map.get(breakpoints.$grid-breakpoints, md)) {
       margin: 0 auto 0 0;
